# heart-disease

./: .editorconfig  .gitignore  Dockerfile  Heart disease.ipynb  README.md  heart-disease.db  main.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  train.py
app/: README.md  api.py  dependencies.py  inference.py  model.py
app/backend/: inference.py  user.py
app/data/: batch_request_sample.json  example_request.json
app/database/: __init__.py  query.py  tables.py
app/routers/: model.py  predict.py  users.py
app/sample/: models_feature.json  single_request_sample.json  users_patient_info.json  users_user.json  users_user_info.json
app/schemas/: model.py  users.py
app/tests/: test_api.py  test_model.py  test_predict.py  test_users.py
heart_disease/: README.md  base.py  data.py  models.py  train.py
heart_disease/config/: __init__.py  config.py  consts.py  util.py
heart_disease/config/logger/: Debug.cfg  Dist.cfg  Release.cfg
heart_disease/config/setup/: global.cfg
