[metadata]
name = heart_disease
version = 1.3.0
author = Bolarinwa Ajayi
author_email = ajayibcd@gmail.com
description = A web API to predict heart diseases using different ML algorithms.
license = MIT
keywords = machine-learning, heart-disease, inference-api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/victor-iyi/heart-disease
requirements-file = requirements.txt
classifers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Version Control
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Machine Learning

[options]
packages = find:
package_dir =
  heart_disease=heart_disease
  app=app
install_requires =
  tensorflow >= 2.4
  colorlog >= 4.6.2
python_requires = >=3.7;<3.9
include_package_data = True
zip_safe = True

[options.data_files]
heart_disease/config =
  heart_disease/config/logger/Debug.cfg
  heart_disease/config/logger/Dist.cfg
  heart_disease/config/logger/Release.cfg
  heart_disease/config/setup/global.cfg

[bdist_wheel]
universal = True
